@@ -5,10 +5,17 @@ import io.muic.ssc.webapp.service.UserService;
 import org.apache.catalina.Context;
 import org.apache.catalina.startup.Tomcat;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
 public class ServletRouter {
+
+    private SecurityService securityService;
+
+    public void setSecurityService(SecurityService securityService){
+        this.securityService = securityService;
+    }
 
     private final List<Class<? extends AbstractRoutableHttpServlet>> servletClasses = new ArrayList<>();
 
@@ -20,14 +27,17 @@ public class ServletRouter {
 
      }
 
+
+
     public void init(Context ctx){
+
          UserService userService = new UserService();
          SecurityService securityService = new SecurityService();
-         securityService.setUserService(userService);
+         securityService.setUserService(userService.getInstance());
 
          for (Class<? extends AbstractRoutableHttpServlet> servletClass: servletClasses){
              try{
-                 AbstractRoutableHttpServlet httpServlet = servletClass.newInstance();
+                 AbstractRoutableHttpServlet httpServlet = servletClass.getDeclaredConstructor().newInstance();
                  httpServlet.setSecurityService(securityService);
                  Tomcat.addServlet(ctx, servletClass.getSimpleName(), httpServlet);
                  ctx.addServletMapping(httpServlet.getPattern(), servletClass.getSimpleName());
@@ -36,6 +46,12 @@ public class ServletRouter {
                  e.printStackTrace();
              }
              catch(IllegalAccessException e) {
+                 e.printStackTrace();
+             }
+             catch (InvocationTargetException e) {
+                 e.printStackTrace();
+             }
+             catch (NoSuchMethodException e) {
                  e.printStackTrace();
              }
          }
